mengganti fungsi repeat

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <style>
       body {
         font-size: 150%;
+        /* word-spacing: 15px; */
+      }
+      .renderWords {
+        letter-spacing: 3px;
+      }
+      .words {
+        word-spacing: 20px;
       }
 
       .highlight {
