menambah fitur error detection

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       .invalid {
         color: red;
       }
+      .invalidBG {
+        background-color: red;
+      }
       .timer {
         font-size: 150%;
       }
